--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
     width: 100%; */
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .navbar {
     height: 60px;
     background-color: #0f1111;
@@ -132,7 +137,10 @@ span {
     justify-content: space-evenly;
     color: white;
     z-index: 10;
+}
 
+.panel-all a {
+    font-size: 13px;
 }
 
 .panel-options {
@@ -140,7 +148,7 @@ span {
     font-size: 0.85vw;
 }
 
-.panel-options p {
+.panel-options a {
     margin-left: 20px;
     display: inline;
 }
@@ -178,7 +186,7 @@ span {
 .heroImages img {
     display: block;
     min-width: 100%;
-    animation: moveleft 30s infinite linear;
+    animation: moveleft 15s infinite linear;
 }
 
 @keyframes moveleft {
@@ -333,6 +341,7 @@ span {
     font-size: 10px;
     margin-left: 5px;
     color: black;
+    margin: 10px 10px 10px;
 }
 
 .box h2 {
@@ -346,9 +355,9 @@ span {
     margin-right: 10px;
 }
 
-.box-content p {
+.box-content a {
     color: #007185;
-    margin: 10px 10px;
+    margin: 10px 10px 10px;
     font-size: 0.8rem;
     display: inline-block;
 }
@@ -460,7 +469,8 @@ span {
     text-decoration: none;
 }
 
-.rowBoxSigninInner button {
+.rowBoxSigninInner .signinBtn {
+    display: inline-block;
     width: 95%;
     margin: 8px 0px;
     padding: 5px;
@@ -1127,14 +1137,16 @@ ul a:hover {
         min-height: 50px;
         width: 100px;
         /* background-color: rebeccapurple; */
+        display: none;
     }
 
     .logox {
-        background-image: url("amazon_logo.png");
+        /* background-image: url("amazon_logo.png");
         background-size: cover;
         background-position: center;
         height: 50px;
-        width: 70px;
+        width: 70px; */
+        /* display: none; */
     }
 
     .border:hover {
@@ -1199,7 +1211,7 @@ ul a:hover {
     /* Panel ------------------ */
 
     .panel {
-        font-size: 2.7vw;
+        font-size: 12px;
         height: 40px;
         padding: 0px 2px;
     }
@@ -1209,7 +1221,9 @@ ul a:hover {
     }
 
     .panel-options {
-        font-size: 1.9vw;
+        font-size: 11px;
+        width: 400px;
+        /* background-color: red; */
     }
 
     .panel-deals {
@@ -1227,9 +1241,10 @@ ul a:hover {
         position: fixed;
         bottom: 0px;
         left: 0px;
-        width: 100vw;
-        height: 10vw;
+        width: 100%;
+        height: 50px;
         background-color: rgb(255, 255, 255);
+        /* background-color: red; */
         color: black;
         z-index: 100;
         display: block;
@@ -1241,23 +1256,27 @@ ul a:hover {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 2vw 15%;
+        padding: 3px 15%;
     }
 
     .mobileViewDisplay ul li {
         list-style: none;
+    }
+
+    .mobileViewDisplay ul li a {
         display: flex;
         align-items: center;
         flex-direction: column;
+        color: black;
     }
 
-    .mobileViewDisplay ul li p {
-        font-size: 3vw;
+    .mobileViewDisplay ul li a p {
+        font-size: 13px;
     }
 
-    .mobileViewDisplay ul li i {
+    .mobileViewDisplay ul li a i {
         margin-bottom: 2px;
-        font-size: 2.7vw;
+        font-size: 13px;
     }
 
 
