--- a/style.css
+++ b/style.css
@@ -1314,9 +1314,9 @@ ul a:hover {
         position: absolute;
         margin-top: 100px;
         max-width: 100%;
-        height: 2010vw;
-        background-color: rgb(222, 222, 222);
-        display: flex;
+        height: 1920vw;
+        background-color: rgb(202, 200, 200);
+        /* display: flex; */
     }
 
     /* BOx------------------------------------ */
@@ -1324,7 +1324,7 @@ ul a:hover {
     .box {
         padding: 5px 10px 5px;
         height: 103vw;
-        margin-bottom: 10px;
+        /* margin-bottom: 100px; */
         background-color: rgb(255, 255, 255);
         flex-basis: 100%;
         border-radius: 0px;
@@ -1384,6 +1384,12 @@ ul a:hover {
         margin-left: 0px;
         margin-top: 1vw;
         font-size: 3vw;
+    }
+
+    .lastBox {
+        /* padding-bottom: 100px;
+        background-color: red; */
+        height: 109vw;
     }
 
 
